name:                pi
version:             0.1.0
synopsis:            Calculate PI
-- description:         
homepage:            http://xxx
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
copyright:           (c) 2012 Hideyuki Tanaka
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable pi
  main-is:             Main.hs
  other-modules:       PI
  build-depends:       base == 4.*

executable pi-bench
  main-is:             bench.hs
  other-modules:       PI
  build-depends:       base == 4.*
                     , criterion
  ghc-options:         -O2 -threaded
